video: play, pause, mute, progress, rewind

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   video_player: ^2.7.1
   carousel_slider: ^4.2.1
   webview_flutter: ^4.2.4
+  smooth_video_progress: ^0.0.4
 
 dev_dependencies:
   flutter_test:
